syntax = "proto3";

package greet;

option go_package="github.com\\ksaduakasov\\grpc-go-course\\greet\\greetpb;greetpb";

message IntRequest{
  int32 number = 1;
}
message IntResponse{
  int32 result = 1;
}
message AvgResponse{
  double result = 1;
}

service CalculatorService{
  rpc PrimeNumberDecomposition(IntRequest) returns (stream IntResponse);
  rpc ComputeAverage(stream IntRequest) returns (AvgResponse);
}